// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HotelBreakdownRows > matches snapshot when loaded and isOpen = false 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="p-0 bg-transparent"
          colspan="6"
        >
          <div
            class="transition-all duration-500 ease-in-out overflow-hidden max-h-0 opacity-0"
            data-testid="visibility-container"
          >
            <table
              class="w-full"
            >
              <tbody
                class="w-full bg-white-100 dark:bg-[#a9ba9d] relative"
              >
                <tr>
                  <td
                    class="p-0 bg-transparent"
                    colspan="6"
                  >
                    <table
                      class="w-full"
                    >
                      <thead
                        class="text-white-100 bg-zinc-800"
                      >
                        <tr>
                          <td
                            align="center"
                          >
                            Description
                          </td>
                          <td
                            align="center"
                          >
                            Nr. Units
                          </td>
                          <td
                            align="center"
                          >
                            Nr. of Nights
                          </td>
                          <td
                            align="center"
                          >
                            Cost per Room per Night
                          </td>
                          <td
                            align="center"
                          >
                            Total Cost
                          </td>
                        </tr>
                      </thead>
                      <tbody
                        class="text-[#000]"
                      >
                        <tr
                          data-testid="HotelBreakdownRow"
                        >
                          <td>
                            Double Room Single Use
                          </td>
                          <td>
                            2
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            100
                          </td>
                          <td>
                            200
                          </td>
                        </tr>
                        <tr
                          data-testid="HotelBreakdownRow"
                        >
                          <td>
                            Double Room // Twin Room
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            150
                          </td>
                          <td>
                            150
                          </td>
                        </tr>
                        <tr
                          data-testid="HotelBreakdownRow"
                        >
                          <td>
                            City Tax
                          </td>
                          <td>
                            4
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            20
                          </td>
                          <td>
                            80
                          </td>
                        </tr>
                        <tr
                          data-testid="HotelBreakdownRow"
                        >
                          <td>
                            Breakfast
                          </td>
                          <td>
                            4
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            10
                          </td>
                          <td>
                            40
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`HotelBreakdownRows > matches snapshot when loaded and isOpen = true 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="p-0 bg-transparent"
          colspan="6"
        >
          <div
            class="transition-all duration-500 ease-in-out overflow-hidden max-h-[800px] opacity-100"
            data-testid="visibility-container"
          >
            <table
              class="w-full"
            >
              <tbody
                class="w-full bg-white-100 dark:bg-[#a9ba9d] relative"
              >
                <tr>
                  <td
                    class="p-0 bg-transparent"
                    colspan="6"
                  >
                    <table
                      class="w-full"
                    >
                      <thead
                        class="text-white-100 bg-zinc-800"
                      >
                        <tr>
                          <td
                            align="center"
                          >
                            Description
                          </td>
                          <td
                            align="center"
                          >
                            Nr. Units
                          </td>
                          <td
                            align="center"
                          >
                            Nr. of Nights
                          </td>
                          <td
                            align="center"
                          >
                            Cost per Room per Night
                          </td>
                          <td
                            align="center"
                          >
                            Total Cost
                          </td>
                        </tr>
                      </thead>
                      <tbody
                        class="text-[#000]"
                      >
                        <tr
                          data-testid="HotelBreakdownRow"
                        >
                          <td>
                            Double Room Single Use
                          </td>
                          <td>
                            2
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            100
                          </td>
                          <td>
                            200
                          </td>
                        </tr>
                        <tr
                          data-testid="HotelBreakdownRow"
                        >
                          <td>
                            Double Room // Twin Room
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            150
                          </td>
                          <td>
                            150
                          </td>
                        </tr>
                        <tr
                          data-testid="HotelBreakdownRow"
                        >
                          <td>
                            City Tax
                          </td>
                          <td>
                            4
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            20
                          </td>
                          <td>
                            80
                          </td>
                        </tr>
                        <tr
                          data-testid="HotelBreakdownRow"
                        >
                          <td>
                            Breakfast
                          </td>
                          <td>
                            4
                          </td>
                          <td>
                            1
                          </td>
                          <td>
                            10
                          </td>
                          <td>
                            40
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`HotelBreakdownRows > matches snapshot when loading 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="p-0 bg-transparent"
          colspan="6"
        >
          <div
            class="transition-all duration-500 ease-in-out overflow-hidden max-h-[800px] opacity-100"
            data-testid="visibility-container"
          >
            <table
              class="w-full"
            >
              <tbody
                class="w-full bg-white-100 dark:bg-[#a9ba9d] relative"
              >
                <tr>
                  <td
                    class="p-0 bg-transparent"
                    colspan="6"
                  >
                    <div
                      class="flex items-center justify-center  dark:opacity-20 z-0 pointer-events-none"
                    >
                      <div
                        data-testid="Spinner"
                      >
                        Loading...
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
